Fix whitespace below color palette

--- a/styles/web/common/spreadsheet.less
+++ b/styles/web/common/spreadsheet.less
@@ -312,25 +312,31 @@
     }
 }
 
-.k-spreadsheet-popup .k-separator {
-    width: 1px;
-    height: 1.8em;
-    vertical-align: middle;
-    display: inline-block;
-}
+.k-spreadsheet-popup {
+    .k-separator {
+        width: 1px;
+        height: 1.8em;
+        vertical-align: middle;
+        display: inline-block;
+    }
 
-.k-spreadsheet-popup .k-button.k-button-icon {
-    padding: 0.6em;
-    border-width: 0;
-    border-radius: 0;
-}
+    .k-colorpalette {
+        vertical-align: top;
+    }
 
-.k-spreadsheet-popup .k-button.k-button-icontext {
-    display: block;
-    text-align: left;
-    padding: .3em .9em;
-    border-width: 0;
-    border-radius: 0;
+    .k-button.k-button-icon {
+        padding: 0.6em;
+        border-width: 0;
+        border-radius: 0;
+    }
+
+    .k-button.k-button-icontext {
+        display: block;
+        text-align: left;
+        padding: .3em .9em;
+        border-width: 0;
+        border-radius: 0;
+    }
 }
 
 .k-spreadsheet-filter-menu {
